--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_audio_comment_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_audio_comment_cell.xml
@@ -12,17 +12,17 @@
         android:id="@+id/relativeMainContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="4dp"
         android:paddingLeft="10dp"
+        android:paddingTop="8dp"
         android:paddingRight="10dp"
-        android:paddingTop="8dp">
+        android:paddingBottom="4dp">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/commentorImageView"
             android:layout_width="@dimen/ad_comments_profile_pic_width"
             android:layout_height="@dimen/ad_comments_profile_pic_width"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:contentDescription="@string/author_img"
             android:src="@drawable/default_commentor_img"
@@ -36,8 +36,8 @@
             android:id="@+id/commentorUsernameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
             android:layout_marginStart="3dp"
+            android:layout_marginLeft="3dp"
             android:layout_toEndOf="@+id/commentorImageView"
             android:layout_toRightOf="@+id/commentorImageView"
             android:ellipsize="end"
@@ -62,22 +62,14 @@
             android:textSize="14sp"
             app:fontName="oswald.ttf" />
 
-        <ImageView
-            android:id="@+id/playAudioImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/commentorUsernameTextView"
-            android:layout_alignStart="@+id/commentorUsernameTextView"
-            android:layout_below="@id/commentorUsernameTextView"
-            android:src="@drawable/play_button" />
 
         <com.mycity4kids.widget.LinkifiedTextView
             android:id="@+id/commentDataTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/commentorUsernameTextView"
-            android:layout_alignStart="@+id/commentorUsernameTextView"
             android:layout_below="@id/commentorUsernameTextView"
+            android:layout_alignStart="@+id/commentorUsernameTextView"
+            android:layout_alignLeft="@+id/commentorUsernameTextView"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:paddingLeft="5dp"
@@ -93,86 +85,80 @@
             android:id="@+id/media"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_below="@id/playAudioImageView"
+            android:layout_below="@id/playAudioLayout"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="20dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:visibility="gone" />
 
-        <!--<LinearLayout-->
-        <!--android:id="@+id/dateContainermedia"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/media"-->
-        <!--android:orientation="horizontal">-->
+        <LinearLayout
+            android:id="@+id/playAudioLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/commentDataTextView"
+            android:layout_toEndOf="@+id/commentorImageView"
+            android:layout_toRightOf="@+id/commentorImageView"
+            android:layout_marginTop="10dp">
 
-        <!--<com.mycity4kids.widget.CustomFontTextView-->
-        <!--android:id="@+id/replyCommentTextViewmedia"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:clickable="true"-->
-        <!--android:padding="5dp"-->
-        <!--android:text="Reply"-->
-        <!--android:textColor="@color/ad.comment.date"-->
-        <!--android:textSize="14sp"-->
-        <!--android:visibility="gone"-->
-        <!--app:fontName="oswald.ttf" />-->
+            <ImageView
+                android:id="@+id/playAudioImageView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="0.2"
+                android:src="@drawable/play" />
 
-        <!--<com.mycity4kids.widget.CustomFontTextView-->
-        <!--android:id="@+id/commentDateTextViewmedia"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:padding="5dp"-->
-        <!--android:text="Date"-->
-        <!--android:textColor="@color/ad.comment.date"-->
-        <!--android:textSize="12sp"-->
-        <!--android:visibility="gone"-->
-        <!--app:fontName="oswald.ttf" />-->
-        <!--</LinearLayout>-->
+            <ImageView
+                android:id="@+id/pauseAudioImageView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="0.2"
+                android:src="@drawable/pause"
+                android:visibility="gone" />
 
-        <!--<com.mycity4kids.widget.CustomFontTextView-->
-        <!--android:id="@+id/replyCountTextViewmedia"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@id/dateContainermedia"-->
-        <!--android:paddingBottom="10dp"-->
-        <!--android:paddingLeft="5dp"-->
-        <!--android:paddingTop="10dp"-->
-        <!--android:text="View All Replies"-->
-        <!--android:visibility="gone" />-->
+            <SeekBar
+                android:id="@+id/audioSeekBar"
+                android:layout_width="0dp"
+                android:layout_height="4dp"
+                android:layout_below="@+id/commentDateTextView"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@+id/playAudioImageView"
+                android:layout_weight="0.8"
+                android:progressDrawable="@drawable/progress"
+                android:thumb="@color/app_red" />
+        </LinearLayout>
 
-        <!--<LinearLayout-->
-        <!--android:id="@+id/dateContainer"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignLeft="@+id/commentorUsernameTextView"-->
-        <!--android:layout_alignStart="@+id/commentorUsernameTextView"-->
-        <!--android:layout_below="@+id/commentDataTextView"-->
-        <!--android:orientation="horizontal">-->
+        <LinearLayout
+            android:id="@+id/timerLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/playAudioLayout"
+            android:layout_alignStart="@+id/commentorUsernameTextView"
+            android:layout_alignLeft="@+id/commentorUsernameTextView"
+            android:layout_marginTop="10dp"
+            android:background="?attr/selectableItemBackgroundBorderless">
 
-        <!--<com.mycity4kids.widget.CustomFontTextView-->
-        <!--android:id="@+id/replyCommentTextView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:padding="5dp"-->
-        <!--android:text="Reply"-->
-        <!--android:textColor="@color/ad.comment.date"-->
-        <!--android:textSize="14sp"-->
-        <!--app:fontName="oswald.ttf" />-->
-
-        <!--</LinearLayout>-->
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/audioTimeElapsed"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="25dp"
+                android:gravity="center"
+                android:textColor="@color/groups.grey"
+                android:textSize="12sp"
+                app:fontName="oswald.ttf" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/upvoteCommentContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/commentorUsernameTextView"
+            android:layout_below="@+id/timerLayout"
             android:layout_alignStart="@+id/commentorUsernameTextView"
-            android:layout_below="@+id/media"
+            android:layout_alignLeft="@+id/commentorUsernameTextView"
             android:layout_marginTop="15dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
@@ -201,9 +187,9 @@
             android:id="@+id/downvoteCommentContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/media"
+            android:layout_below="@+id/timerLayout"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="15dp"
             android:layout_toRightOf="@+id/upvoteCommentContainer"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
@@ -232,9 +218,9 @@
             android:id="@+id/replyCommentTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/timerLayout"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/media"
             android:layout_marginTop="10dp"
             android:padding="5dp"
             android:text="Reply"
@@ -246,20 +232,16 @@
             android:id="@+id/replyCountTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/upvoteCommentContainer"
             android:layout_below="@id/upvoteCommentContainer"
+            android:layout_alignLeft="@+id/upvoteCommentContainer"
             android:layout_marginTop="6dp"
-            android:paddingBottom="6dp"
             android:paddingLeft="5dp"
             android:paddingTop="6dp"
+            android:paddingBottom="6dp"
             android:text="View All Replies"
             android:visibility="gone" />
 
     </RelativeLayout>
-
-    <com.mycity4kids.widget.CustomFontTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <View
         android:id="@+id/underlineView"
