--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -50,4 +50,6 @@
     <!-- VIDEO TRIMMER-->
     <dimen name="progress_video_line_height">2dp</dimen>
     <dimen name="frames_video_height">40dip</dimen>
+    <dimen name="space_20">20dp</dimen>
+    <dimen name="space_10">10dp</dimen>
 </resources>
