--- a/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/recording_layout.xml
@@ -12,6 +12,7 @@
         android:layout_marginRight="56dp"
         android:layout_marginBottom="4dp"
         android:elevation="0dp"
+        android:visibility="gone"
         app:cardCornerRadius="20dp">
 
         <LinearLayout
@@ -79,7 +80,7 @@
             android:id="@+id/imageAudio"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/record_audio_ic" />
+            android:src="@drawable/ic_add_image" />
 
     </android.support.v7.widget.CardView>
 
@@ -144,6 +145,7 @@
         android:layout_height="wrap_content"
         android:gravity="bottom"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:translationZ="4dp">
 
         <FrameLayout
