--- a/MyCity4Kids/MyCity4Kids/res/layout/signup_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/signup_fragment.xml
@@ -47,10 +47,11 @@
             android:layout_marginRight="45dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/facebook_rounded_corners"
+            android:drawableLeft="@drawable/icon_facebook"
             android:drawablePadding="-30dp"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
             android:paddingTop="8dp"
             android:text="@string/signup.connect_via_facebook"
             android:textColor="@color/white_color"
@@ -66,10 +67,11 @@
             android:layout_marginRight="45dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/gplus_rounded_corners"
+            android:drawableLeft="@drawable/icon_google"
             android:drawablePadding="-30dp"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
             android:paddingTop="8dp"
             android:text="@string/signup.connect_via_google"
             android:textColor="@color/white_color"
@@ -85,10 +87,11 @@
             android:layout_marginRight="45dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/phone_login_rounded_corners"
+            android:drawableLeft="@drawable/icon_phone"
             android:drawablePadding="-30dp"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
             android:paddingTop="8dp"
             android:text="@string/signup.connect_via_phone"
             android:textColor="@color/white_color"
