--- a/MyCity4Kids/MyCity4Kids/res/drawable/phone_login_rounded_corners.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/phone_login_rounded_corners.xml
@@ -2,13 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="#7032B1" />
+        android:color="#35dec2" />
 
-    <solid android:color="#7032B1" />
+    <solid android:color="#35dec2" />
 
     <padding
         android:left="1dp"
         android:right="1dp"
         android:top="1dp" />
+    <corners android:radius="5dp" />
+
 
 </shape>
