--- a/MyCity4Kids/MyCity4Kids/res/layout/signin_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/signin_fragment.xml
@@ -45,10 +45,11 @@
             android:layout_marginRight="45dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/facebook_rounded_corners"
+            android:drawableLeft="@drawable/icon_facebook"
             android:drawablePadding="-30dp"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
             android:paddingTop="8dp"
             android:text="@string/signin.login_via_facebook"
             android:textColor="@color/white_color"
@@ -64,10 +65,11 @@
             android:layout_marginRight="45dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/gplus_rounded_corners"
+            android:drawableLeft="@drawable/icon_google"
             android:drawablePadding="-30dp"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
             android:paddingTop="8dp"
             android:text="@string/signin.login_via_google"
             android:textColor="@color/white_color"
@@ -83,10 +85,11 @@
             android:layout_marginRight="45dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/email_login_button_bg"
+            android:drawableLeft="@drawable/icon_mail"
             android:drawablePadding="-30dp"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
             android:paddingTop="8dp"
             android:text="@string/signin.login_via_email"
             android:textColor="@color/white_color"
@@ -102,10 +105,11 @@
             android:layout_marginRight="45dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/phone_login_rounded_corners"
+            android:drawableLeft="@drawable/icon_phone"
             android:drawablePadding="-30dp"
             android:gravity="center"
             android:paddingBottom="8dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="2dp"
             android:paddingTop="8dp"
             android:text="@string/signin.login_via_phone"
             android:textColor="@color/white_color"
