layouts and other normal functionationality done

--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_fragment.xml
@@ -710,7 +710,7 @@
                     android:layout_weight="1"
                     android:drawablePadding="2dp"
                     android:drawableTint="@color/app_red"
-                    android:drawableTop="@drawable/ic_facebook"
+                    android:drawableTop="@drawable/ic_facebook_svg"
                     android:gravity="center"
                     android:text="@string/ad.bottom_bar.facebook"
                     android:textColor="@color/app_grey"
