--- a/MyCity4Kids/MyCity4Kids/res/layout/article_details_container.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_details_container.xml
@@ -202,7 +202,7 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:drawableTint="@color/white"
-                android:drawableTop="@drawable/ic_facebook"
+                android:drawableTop="@drawable/ic_facebook_svg"
                 android:gravity="center" />
 
             <com.mycity4kids.widget.CustomFontTextView
