--- a/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
@@ -1448,7 +1448,7 @@
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
                     android:paddingTop="12dp"
-                    android:src="@drawable/ic_facebook"
+                    android:src="@drawable/ic_facebook_svg"
                     android:tint="@color/app_red" />
 
                 <android.support.v7.widget.AppCompatImageView
