--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -85,7 +85,7 @@
 
 
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
@@ -96,9 +96,17 @@
                     android:id="@+id/editPhone"
                     android:layout_width="match_parent"
                     android:layout_height="57dp"
-                    android:layout_toStartOf="@+id/changePasswordTextView"
-                    android:layout_toLeftOf="@+id/changePasswordTextView"
-                    android:layout_toRightOf="@+id/changePasswordTextView"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginBottom="0dp"
                     android:background="@drawable/mainprofile_thin_border"
                     android:gravity="center_vertical"
                     android:inputType="number"
@@ -108,14 +116,16 @@
                     app:fontName="oswald.ttf" />
 
                 <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/changePasswordTextView"
+                    android:id="@+id/textVerify"
                     android:layout_width="50sp"
                     android:layout_height="30sp"
+                    android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="4dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@drawable/button_round"
-                    android:gravity="center"
+                    android:gravity="center_vertical|end"
                     android:text="VERIFY"
                     android:textColor="@color/white"
                     android:textSize="14sp"
@@ -201,7 +211,7 @@
                     app:layout_constraintTop_toTopOf="@+id/genderSpinner" />
 
                 <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/kidsDOBTextView"
+                    android:id="@+id/textDOB"
                     android:layout_width="170dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="7dp"
@@ -273,6 +283,7 @@
                     app:fontName="oswald_regular.ttf" />
 
                 <RadioGroup
+                    android:id="@+id/radioGroupWorkingStatus"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginTop="5dp"
@@ -281,7 +292,7 @@
                     android:layout_below="@+id/textWorkingStatus">
 
                 <android.support.v7.widget.AppCompatRadioButton
-                    android:id="@+id/checkWorking"
+                    android:id="@+id/radiokWorking"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_below="@id/textWorkingStatus"
@@ -294,7 +305,7 @@
                     android:textColor="@color/app_light_black" />
 
                 <android.support.v7.widget.AppCompatRadioButton
-                    android:id="@+id/checkNotWorking"
+                    android:id="@+id/radioNotWorking"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
